--- a/test2.ipynb
+++ b/test2.ipynb
@@ -45,8 +45,8 @@
   },
   {
    "source": [
-    "As we can see, this is epic <br>\n",
-    "le bruh <br>\n",
+    "Test <br>\n",
+    "Test <br>\n",
     "le me <br>\n",
     "le you <br>"
    ],
